--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#link1">Link 1</a></li>
-            <li><a href="#link2">Link 2</a></li>
-            <li><a href="#link3">Link 3</a></li>
+            <li><a href="https://www.google.com/search?q=dog+images&rlz=1C1CHZN_en-GBIN1109IN1109&oq=dog&gs_lcrp=EgZjaHJvbWUqCggCEAAYsQMYgAQyDQgAEAAY4wIYsQMYgAQyCggBEC4YsQMYgAQyCggCEAAYsQMYgAQyCggDEAAYsQMYgAQyEAgEEAAYgwEYsQMYgAQYigUyDQgFEC4YsQMYgAQYigUyCggGEAAYsQMYgAQyCggHEAAYsQMYgAQyBwgIEAAYgAQyCggJEAAYsQMYgATSAQgyODQyajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#vhid=rLyV376IoQ8n5M&vssid=l">Link 1</a></li>
+            <li><a href="https://www.google.com/search?q=dog+images&rlz=1C1CHZN_en-GBIN1109IN1109&oq=dog&gs_lcrp=EgZjaHJvbWUqCggCEAAYsQMYgAQyDQgAEAAY4wIYsQMYgAQyCggBEC4YsQMYgAQyCggCEAAYsQMYgAQyCggDEAAYsQMYgAQyEAgEEAAYgwEYsQMYgAQYigUyDQgFEC4YsQMYgAQYigUyCggGEAAYsQMYgAQyCggHEAAYsQMYgAQyBwgIEAAYgAQyCggJEAAYsQMYgATSAQgyODQyajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#vhid=rLyV376IoQ8n5M&vssid=l">Link 2</a></li>
+            <li><a href="https://www.google.com/search?q=dog+images&rlz=1C1CHZN_en-GBIN1109IN1109&oq=dog&gs_lcrp=EgZjaHJvbWUqCggCEAAYsQMYgAQyDQgAEAAY4wIYsQMYgAQyCggBEC4YsQMYgAQyCggCEAAYsQMYgAQyCggDEAAYsQMYgAQyEAgEEAAYgwEYsQMYgAQYigUyDQgFEC4YsQMYgAQYigUyCggGEAAYsQMYgAQyCggHEAAYsQMYgAQyBwgIEAAYgAQyCggJEAAYsQMYgATSAQgyODQyajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#vhid=rLyV376IoQ8n5M&vssid=l">Link 3</a></li>
         </ul>
     </nav>
 
